# Matrix-Calculator

./: CMakeLists.txt  Makefile  README.md  main.cpp  matrix.cpp  matrix.h  matrix_calculator
src/: MainWindow.cpp  MainWindow.hpp  fraction.cpp  fraction.hpp  main.cpp  matrix.cpp  matrix.hpp
